<resources>
    <string name="app_name">FootTracker</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="teams_title">Teams</string>
    <string name="label_new_team">ADD A NEW TEAM</string>
    <string name="label_teams_list">TEAMS LIST</string>

    <string name="new_match_title">New Match</string>
    <string name="label_date_match">Date of the match</string>
    <string name="label_match_team1">Team 1</string>
    <string name="label_match_team2">Team 2</string>
    <string name="label_versus">VS</string>
    <string name="label_localisation">Localization</string>
    <string name="button_start_match">Start match</string>
    <string name="button_localisation">Localize me</string>

    <string name="history_title">History</string>

    <string name="settings_title">Settings</string>

    <string name="NewMatch">New Match</string>
    <string name="Teams">Teams</string>
    <string name="Settings">Settings</string>
    <string name="openCamera">Open Camera</string>
    <string name="savePicture">Save Picture</string>

    <string name="english">English</string>
    <string name="french">French</string>


    <string name="goals">Goals</string>
    <string name="cartons_jaunes">Yellow card</string>
    <string name="cartons_rouges">Red card</string>
    <string name="penalty">Penaltys</string>
    <string name="coups_francs">Free kicks</string>
    <string name="hors_jeu">Hors jeu</string>

    <string name="saveMatch">Save match</string>






</resources>