<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/AppTheme">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginVertical="30dp">

        <TextView
            android:id="@+id/historyTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_title"
            android:textAlignment="center"
            android:layout_marginBottom="50dp"
            android:textSize="30sp" />

        <Button
            android:id="@+id/app_anglais"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="20dp"
            android:background="@drawable/button"
            android:text="@string/english" />

        <Button
            android:id="@+id/app_francais"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="20dp"
            android:background="@drawable/button"
            android:text="@string/french" />

    </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>