<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatisticsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="109dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="40dp">

                <TextView
                    android:id="@+id/teamName1"
                    android:layout_width="205dp"
                    android:layout_height="48dp"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/teamName2"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textAlignment="center" />
            </LinearLayout>


            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/goals"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/addGoalTeam1Button"
                    android:layout_width="5dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_round"
                    android:text="+" />

                <EditText
                    android:id="@+id/numberGoalsTeam1"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:textColor="@color/textColor"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/numberGoalsTeam2"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:textColor="@color/textColor"
                    android:inputType="number" />

                <Button
                    android:id="@+id/addGoalTeam2Button"
                    android:layout_width="5dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_round"
                    android:text="+" />
            </LinearLayout>

            <TextView
                android:id="@+id/cartonsJaunesTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cartons_jaunes"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/addCartonJauneTeam1Button"
                    android:layout_width="5dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_round"
                    android:text="+" />

                <EditText
                    android:id="@+id/numberCartonJauneTeam1"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:textColor="@color/textColor"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/numberCartonJauneTeam2"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:textColor="@color/textColor"
                    android:inputType="number" />

                <Button
                    android:id="@+id/addCartonJauneTeam2Button"
                    android:layout_width="5dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_round"

                    android:text="+" />
            </LinearLayout>

            <TextView
                android:id="@+id/cartonsRougesTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cartons_rouges"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/addCartonRougeTeam1Button"
                    android:layout_width="5dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_round"
                    android:text="+" />

                <EditText
                    android:id="@+id/numberCartonRougeTeam1"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:textColor="@color/textColor"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/numberCartonRougeTeam2"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:textColor="@color/textColor"
                    android:inputType="number" />

                <Button
                    android:id="@+id/addCartonRougeTeam2Button"
                    android:layout_width="5dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_round"

                    android:text="+" />
            </LinearLayout>

            <TextView
                android:id="@+id/penaltysTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/penalty"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/addPenaltyTeam1Button"
                    android:layout_width="5dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_round"
                    android:text="+" />

                <EditText
                    android:id="@+id/numberPenaltyTeam1"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:textColor="@color/textColor"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/numberPenaltyTeam2"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:textColor="@color/textColor"
                    android:inputType="number" />

                <Button
                    android:id="@+id/addPenaltyTeam2Button"
                    android:layout_width="5dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_round"
                    android:text="+" />
            </LinearLayout>

            <TextView
                android:id="@+id/coupsFrancsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/coups_francs"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/addCoupFrancTeam1Button"
                    android:layout_width="5dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_round"
                    android:text="+" />

                <EditText
                    android:id="@+id/numberCoupFrancTeam1"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:textColor="@color/textColor"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/numberCoupFrancTeam2"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:textColor="@color/textColor"
                    android:inputType="number" />

                <Button
                    android:id="@+id/addCoupFrancTeam2Button"
                    android:layout_width="5dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_round"
                    android:text="+" />
            </LinearLayout>

            <TextView
                android:id="@+id/horsJeuTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hors_jeu"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/addHorsJeuTeam1Button"
                    android:layout_width="5dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_round"
                    android:text="+" />

                <EditText
                    android:id="@+id/numberHorsJeuTeam1"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:textColor="@color/textColor"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/numberHorsJeuTeam2"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:textColor="@color/textColor"
                    android:inputType="number" />

                <Button
                    android:id="@+id/addHorsJeuTeam2Button"
                    android:layout_width="5dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_round"
                    android:text="+" />
            </LinearLayout>

            <Button
                android:id="@+id/saveStatGameButton"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:layout_marginVertical="30dp"
                android:text="@string/saveMatch" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>